...
      <Tab.Screen
        name="MyItems"
        component={MyItemsScreen}
        options={{ title: 'My items' }}
      />
      <Tab.Screen
        name="Activity"
        options={{ title: 'Inbox' }}
        listeners={{
          tabPress: fetchBadgeCount,
        }}
      >
        {(props) => <InboxScreen {...props} onRead={fetchBadgeCount} />}
      </Tab.Screen>
      <Tab.Screen
        name="Profile"
        component={ProfileScreen}
        options={{ title: 'Profile' }}
      />
    </Tab.Navigator>
    </FeedSeenContext.Provider>
  );
...
